- Criação dos componentes de card de depoimentos e botões.

--- a/index.html
+++ b/index.html
@@ -8,21 +8,23 @@
     <title>Neon</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Poppins:wght@400;500;600;700&display=swap"
+          rel="stylesheet">
     <link rel="stylesheet" href="./css/style.min.css">
 </head>
 <body>
-    <header>
+<header>
 
-    </header>
-    <main>
-        <h1>Heading</h1>
-        <h2>Heading</h2>
-        <h3>Heading</h3>
-        <h4>Heading</h4>
-    </main>
-    <footer>
+</header>
+<main>
+    <div class="container">
+        <button class="btn-primary">Abra sua conta digital</button>
+        <button class="btn-secondary">Abra sua conta digital</button>
+        <button class="btn-secondary white">Abra sua conta digital</button>
+    </div>
+</main>
+<footer>
 
-    </footer>
+</footer>
 </body>
 </html>
