--- a/index.html
+++ b/index.html
@@ -14,14 +14,26 @@
 </head>
 <body>
 <header>
+    <div class="container">
+        <div class="logo">
+            <img src="./img/logo.svg" alt="Logo Neon">
+        </div>
 
+        <nav>
+            <ul>
+                <li><a href="#">Produtos</a></li>
+                <li><a href="#">Conta digital PJ</a></li>
+                <li><a href="#">Quem somos</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Ajuda</a></li>
+            </ul>
+            <button class="btn-secondary white">Abra sua conta digital</button>
+        </nav>
+
+    </div>
 </header>
 <main>
-    <div class="container">
-        <button class="btn-primary">Abra sua conta digital</button>
-        <button class="btn-secondary">Abra sua conta digital</button>
-        <button class="btn-secondary white">Abra sua conta digital</button>
-    </div>
+
 </main>
 <footer>
 
