--- a/index.html
+++ b/index.html
@@ -42,30 +42,114 @@
                 <ul>
                     <li>
                         <div class="icon">
-                            <img src="./img/icon-anuidade.svg" alt="Icone cartão">
+                            <img src="./img/icon-anuidade.svg" alt="Ícone cartão">
                         </div>
-                        <span>Cartão sem </br> anuidade</span>
+                        <span>Cartão sem <br> anuidade</span>
                     </li>
                     <li>
                         <div class="icon">
-                            <img src="./img/icon-conta-digital.svg" alt="Icone de conta digital">
+                            <img src="./img/icon-conta-digital.svg" alt="Ícone de conta digital">
                         </div>
-                        <span>Conta digital </br> 100% gratís</span>
+                        <span>Conta digital <br> 100% grátis</span>
                     </li>
                     <li>
                         <div class="icon">
-                            <img src="./img/icon-dinheiro.svg" alt="Icone de dinheiro">
+                            <img src="./img/icon-dinheiro.svg" alt="Ícone de dinheiro">
                         </div>
-                        <span>Seu dinheiro </br> rendendo mais</span>
+                        <span>Seu dinheiro <br> rendendo mais</span>
                     </li>
                 </ul>
             </div>
             <div class="area-image">
                 <h2>Banco 100% digital</h2>
                 <div class="image">
-                    <img src="./img/card-neon-frnt.png" class="card-front" alt="">
+                    <img src="./img/card-neon-front.png" class="card-front" alt="">
                     <img src="./img/card-neon-back.png" class="card-back" alt="">
                     <img src="./img/circle-cards-neon.svg" class="circle" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="s-card-neon">
+        <div class="container">
+            <div class="left-area">
+                <div class="ilustra-mockup">
+                    <img src="./img/circle-mockup.svg" class="circle" alt="">
+                    <img src="./img/mockup.svg" class="mockup" alt="">
+                </div>
+                <div class="text">
+                    <div class="icon">
+                        <img src="img/icon-neon.svg" alt="">
+                    </div>
+                    <div class="text-info">
+                        <h3>Baixe nosso app</h3>
+                        <p>Que tal abrir uma conta digital para ver como a gente faz a sua vida muito mais simples?</p>
+                        <ul>
+                            <li>
+                                <a href="#">
+                                    <img src="img/apple-store.svg" alt="loja apple store">
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="#">
+                                    <img src="img/google-play.svg" alt="loja google play">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="right-area">
+                <div class="main-text">
+                    <h2>Resolva sua vida direto pelo app Neon!</h2>
+                    <ul>
+                        <li>
+                            <div class="info">
+                                <img src="img/icon-cartao-credito.svg" alt="">
+                                <div class="txt">
+                                    <h3>Cartão de crédito sem anuidade</h3>
+                                    <p>Conta digital com cartão de crédito sem anuidade e sem complicação</p>
+                                </div>
+                            </div>
+                            <img src="img/arrow-right.svg" alt="">
+                        </li>
+                        <li>
+                            <div class="info">
+                                <img src="img/icon-taxas.svg" alt="">
+                                <div class="txt">
+                                    <h3>Sem taxas</h3>
+                                    <p>Transferência, boletos de depósito e outros serviços gratuitos</p>
+                                </div>
+                            </div>
+                            <img src="img/arrow-right.svg" alt="">
+                        </li>
+
+                        <li>
+                            <div class="info">
+                                <img src="img/icon-investimentos.svg" alt="">
+                                <div class="txt">
+                                    <h3>Mais investimentos</h3>
+                                    <p>Rendem mais que a poupança e você resgata quando quiser</p>
+                                </div>
+                            </div>
+                            <img src="img/arrow-right.svg" alt="">
+                        </li>
+                    </ul>
+                    <a href="#" class="btn">Conheça outros produtos</a>
+                </div>
+
+                <div class="box-card">
+                    <div class="text">
+                        <h2>Neon Pejota</h2>
+                        <h3>Conta digitais PJ gratuitas para decolar seu negócio!</h3>
+                        <p>As melhores contas para fazer pagamento, compras e receber dos seus clientes.</p>
+                        <div class="btns">
+                            <button class="btn-primary">Sou MEI</button>
+                            <button class="btn-primary">Sou ME</button>
+                        </div>
+                    </div>
+                    <img src="img/card-front-pj.svg" alt="" class="image">
                 </div>
             </div>
         </div>
